anime list page

--- a/resources/views/anime_list.edge
+++ b/resources/views/anime_list.edge
@@ -32,15 +32,15 @@
                 </div>
                 <div class="content">
                     <div class="absolute top-0 right-0 mt-3 mr-3">
-                        <button class="ui icon button" title="Edit">
+                        <button class="ui icon button blue" title="Edit">
                             <i class="edit icon"></i>
                         </button>
-                        <button class="ui icon button" title="Delete">
+                        <button class="ui icon button red" title="Delete">
                             <i class="trash icon"></i>
                         </button>
                     </div>
                     
-                    <h2 class="header">
+                    <h2 class="header w-10/12">
                         <a href="anime/rezero.html">{{ anime.nameEN }}</a>
                     </h2>
                     <br/>
