--- a/resources/views/components/layouts/master.edge
+++ b/resources/views/components/layouts/master.edge
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
+    <link rel = "icon" href = images/template/icon.png>
     <link rel="stylesheet" type="text/css" href="/semantic/semantic.min.css">
     <script
         src="https:/code.jquery.com/jquery-3.1.1.min.js"
