--- a/resources/views/anime_list.edge
+++ b/resources/views/anime_list.edge
@@ -10,7 +10,7 @@
             <h3 class="ui header">AniReview</h3>
             <p>เว็บไซต์สำหรับคนที่อยากจะดูอนิเมะหรือคนที่ไม่เคยดูอนิเมะมาก่อนแล้วอยากดูแต่ไม่รู้จะดูเรื่องอะไรดี ถ้าคุณเป็นอย่างนั้นล่ะก็คุณมาถูกที่แล้ว</p>
             <p>เว็บไซต์นี้ผู้เขียนได้รีวิวอนิเมะและให้คะแนนแต่ละเรื่องไว้เพื่อประกอบการตัดสินใจในการเลือกดู</p>
-            <p><span class="text-red-400">!!!คำเตือน!!!</span> การรีวิวและคะแนนแต่ละเรื่องมาจากความคิดเห็นของผู้เขียนเท่านั้น ซึ่งอาจมีความคิดที่ไม่ตรงกับคนอื่นๆ เรื่องไหนที่คุณคิดว่าสนุกเรืองนั้นแหละสนุกสำหรับคุณ ☺☺</p>
+            <p><span class="ui red label">!!!คำเตือน!!!</span> การรีวิวและคะแนนแต่ละเรื่องมาจากความคิดเห็นของผู้เขียนเท่านั้น ซึ่งอาจมีความคิดที่ไม่ตรงกับคนอื่นๆ เรื่องไหนที่คุณคิดว่าสนุกเรืองนั้นแหละสนุกสำหรับคุณ ☺☺</p>
         </div>
     </div>
     
@@ -26,7 +26,7 @@
         <div class="ui divided items segment">
             <div class="item">
                 <div class="ui small image">
-                    <a href="anime/rezero.html">
+                    <a href="{{route('anime.show', [anime.id])}}">
                         <img src="{{ anime.picturePath }}" alt="Re:zero">
                     </a>
                 </div>
