--- a/resources/views/partials/bottom.edge
+++ b/resources/views/partials/bottom.edge
@@ -1,8 +1,8 @@
 <div class="mt-10 bg-yellow-50">
     <div class="flex items-center justify-between">
-        <img src="images/template/bottom2.png" alt="anime2">
+        <img src="/images/template/bottom2.png" alt="anime2">
         <span class="text-gray-500">@writer Chanpol Thippawan</span>
-        <img src="images/template/bottom1.png" alt="anime1">
+        <img src="/images/template/bottom1.png" alt="anime1">
     </div>
 </div>
 
