--- a/resources/views/partials/navbar.edge
+++ b/resources/views/partials/navbar.edge
@@ -41,6 +41,6 @@
             </div>
         </div>
         @end
-    <a href="" class="item">เข้าสู่ระบบ</a>
+    <a href="{{ route('login') }}" class="item">เข้าสู่ระบบ</a>
     </div>
   </div>
