--- a/resources/views/partials/navbar.edge
+++ b/resources/views/partials/navbar.edge
@@ -1,25 +1,3 @@
-{{-- <div class="ui grey large menu inverted">
-    <div class="header item">
-        <a href="">Blog</a>
-    </div>
-    <div class="right menu">
-        @if(auth.isAuthenticated) 
-        <div class="ui dropdown item">
-            User : {{ auth.user.username }}
-            <i class="dropdown icon"></i>
-            <div class="menu">
-                <div class="item">
-                    <a style="color: black;" href="">
-                        Log out
-                    </a>
-                </div>
-            </div>
-        </div>
-        @end
-
-    </div>
-</div> --}}
-
 <div class="ui top fixed menu">
     <div class="item">
         <a href="{{route('anime.home')}}">
@@ -33,14 +11,15 @@
             User : {{ auth.user.username }}
             <i class="dropdown icon"></i>
             <div class="menu">
-                <div class="item">
-                    <a style="color: black;" href="{{ route('users.logout') }}">
-                        Log out
-                    </a>
-                </div>
+                <a class="item w-full" href="{{ route('users.logout') }}">
+                    <span style="color: black;" >
+                        ออกจากระบบ
+                    </span>
+                </a>
             </div>
         </div>
+        @else
+            <a href="{{ route('login') }}" class="item">เข้าสู่ระบบ</a>
         @end
-    <a href="{{ route('login') }}" class="item">เข้าสู่ระบบ</a>
     </div>
   </div>
