--- a/resources/views/anime_list.edge
+++ b/resources/views/anime_list.edge
@@ -15,9 +15,9 @@
     </div>
     @if(auth.isAuthenticated) 
     <div class="ui container text-center mt-5">
-        <button class="ui huge green circular icon button ">
+        <a class="ui huge green circular icon button" href="{{route('anime.create')}}">
             <i class="plus icon"></i> เพิ่ม
-        </button>
+        </a>
     </div>
     @end
 
