--- a/resources/views/partials/navbar.edge
+++ b/resources/views/partials/navbar.edge
@@ -4,7 +4,12 @@
             <img src="/images/template/Anireviewtop.png" alt="logoAnireview"  style="height: 40px; width: auto;">
         </a>
     </div>
-    
+    <div class="item">
+        <a href="{{route('anime.home')}}">
+            หน้าหลัก
+        </a>
+    </div>
+
     <div class="right menu">
       @if(auth.isAuthenticated) 
         <div class="ui dropdown item">
