--- a/resources/views/components/input.edge
+++ b/resources/views/components/input.edge
@@ -9,7 +9,7 @@
         <label for="{{name}}">{{label}}</label> 
     @end
     @if(type=="submit") 
-        <input name="{{name}}" class="ui button" {{ $props.except(['label']).toAttrs() }}>
+        <input name="{{name}}" class="ui orange button" {{ $props.except(['label']).toAttrs() }}>
     @else
         <input name="{{name}}" {{ $props.except(['label']).toAttrs() }}>
     @end
