--- a/resources/views/partials/navbar.edge
+++ b/resources/views/partials/navbar.edge
@@ -4,11 +4,9 @@
             <img src="/images/template/Anireviewtop.png" alt="logoAnireview"  style="height: 40px; width: auto;">
         </a>
     </div>
-    <div class="item">
-        <a href="{{route('anime.home')}}">
-            หน้าหลัก
-        </a>
-    </div>
+    <a class="item" href="{{route('anime.home')}}">
+        หน้าหลัก
+    </a>
 
     <div class="right menu">
       @if(auth.isAuthenticated) 
