--- a/resources/views/anime_detail.edge
+++ b/resources/views/anime_detail.edge
@@ -34,12 +34,12 @@
   <div class="absolute top-0 right-0 mt-3 mr-3 flex flex-col items-end space-y-4">
     @if(auth.isAuthenticated) 
     <div class="lex flex-col items-end">
-      <button class="ui icon button blue" title="Edit">
+      <a class="ui icon button blue" href="{{route('anime.edit', [anime.id])}}">
           <i class="edit icon"></i>
-      </button>
-      <button class="ui icon button red" title="Delete">
+      </a>
+      <a class="ui icon button red delbutton" data-id="{{anime.id}}">
           <i class="trash icon"></i>
-      </button>
+      </a>
     </div>
     @end
     <div class="flex flex-col items-end">
