--- a/resources/views/anime_list.edge
+++ b/resources/views/anime_list.edge
@@ -34,10 +34,10 @@
                 <div class="content">
                     @if(auth.isAuthenticated) 
                     <div class="absolute top-0 right-0 mt-3 mr-3">
-                        <button class="ui icon button blue" title="Edit">
+                        <a class="ui icon button blue" href="{{route('anime.edit', [anime.id])}}">
                             <i class="edit icon"></i>
-                        </button>
-                        <button class="ui icon button red" title="Delete">
+                        </a>
+                        <button class="ui icon button red delbutton" data-id="{{anime.id}}">
                             <i class="trash icon"></i>
                         </button>
                     </div>
