--- a/resources/views/partials/navbar.edge
+++ b/resources/views/partials/navbar.edge
@@ -1,4 +1,4 @@
-<div class="ui top fixed menu">
+<div class="ui top fixed menu z-10">
     <div class="item">
         <a href="{{route('anime.home')}}">
             <img src="/images/template/Anireviewtop.png" alt="logoAnireview"  style="height: 40px; width: auto;">
