--- a/resources/views/anime_list.edge
+++ b/resources/views/anime_list.edge
@@ -37,9 +37,9 @@
                         <a class="ui icon button blue" href="{{route('anime.edit', [anime.id])}}">
                             <i class="edit icon"></i>
                         </a>
-                        <button class="ui icon button red delbutton" data-id="{{anime.id}}">
+                        <a class="ui icon button red delbutton" data-id="{{anime.id}}">
                             <i class="trash icon"></i>
-                        </button>
+                        </a>
                     </div>
                     @end
                     <h2 class="header w-10/12">
