--- a/resources/views/components/layouts/master.edge
+++ b/resources/views/components/layouts/master.edge
@@ -12,11 +12,11 @@
         crossorigin="anonymous"></script>
     <script src="/semantic/semantic.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    {{-- <style>
+    <style>
         @if($slots.style) 
             {{{ await $slots.style()}}}
         @end
-    </style> --}}
+    </style>
     @vite(['resources/css/app.css', 'resources/js/app.js'])
 </head>
 <body class="h-screen flex flex-col">
@@ -52,7 +52,7 @@
     <script>
         $('.ui.dropdown').dropdown();
 
-        if ($('.message').length) {
+        if ($('.message .left-1/2').length) {
             setTimeout(function() {
                 $('.message').transition('fade');
             }, 3000);
