--- a/resources/views/anime_detail.edge
+++ b/resources/views/anime_detail.edge
@@ -14,7 +14,7 @@
  <div class="ui segment">
   <div class="ui grid">
     <div class="three wide column">
-      <img class="ui small image mt-1" src="{{anime.picturePath}}" alt="Re:zero">
+      <img class="ui small image mt-1" src="{{anime.picturePath}}" alt="img anime">
     </div>
     
     <div class="eleven wide column">
