--- a/resources/views/anime_list.edge
+++ b/resources/views/anime_list.edge
@@ -24,7 +24,7 @@
     <div class="ui container mt-5">
         <h1 class="ui header">อนิเมะแนะนำ</h1>
         @each(anime in animeList)
-        <div class="ui divided items segment">
+        <div class="ui divided items segment {{ (new Date(anime.publishOnFormat) > new Date()) ? 'grey' : 'blue' }}">
             <div class="item">
                 <div class="ui small image">
                     <a href="{{route('anime.show', [anime.id])}}">
@@ -49,13 +49,18 @@
                     <span class="meta">
                         <a href="{{route('anime.show', [anime.id])}}">{{ anime.nameTH }}</a>
                     </span>
-    
+                    
                     <div class="extra flex justify-between">
                         <span><b class="bg-black p-1 rounded-lg text-yellow-300">{{ anime.scoreAdmin }}/10</b> admin</span>
+                        @if(anime.scoreUser)
                         <span><b class="bg-black p-1 rounded-lg text-yellow-300">{{ anime.scoreUser }}/10</b> users</span>
+                        @end
+                    </div>
+                    <div class="mt-2">
+                        <span class="text-sm {{ (new Date(anime.publishOnFormat) > new Date()) ? 'text-blue-500' : 'text-gray-700' }} ">{{ (new Date(anime.publishOnFormat) > new Date()) ? 'จะเผยแพร่วันที่' : 'เผยแพร่เมื่อ' }}: {{ anime.publishOnFormat }}</span>
                     </div>
                     <div class="description">
-                        <p>{{ anime.reviewNoSpoiler }} <a href="anime/rezero.html" class="text-blue-700">อ่านต่อ</a></p>
+                        <p>{{ anime.reviewNoSpoiler }} <a href="{{route('anime.show', [anime.id])}}" class="text-blue-700">อ่านต่อ</a></p>
                     </div>
                 </div>
             </div>
